fix: fix background position on small viewport

--- a/assets/style.css
+++ b/assets/style.css
@@ -327,26 +327,22 @@ section.carousel li {
 
 section.carousel li#carousel-slide-1 {
     background: url(https://images.unsplash.com/photo-1698799330469-e53f68a91c08);
-    background-size: cover;
-    background-position: center;
+    background-size: cover;    
 }
 
 section.carousel li#carousel-slide-2 {
     background: url(https://images.unsplash.com/photo-1698267703889-06c41f9acba5);
-    background-size: cover;
-    background-position: center;
+    background-size: cover;    
 }
 
 section.carousel li#carousel-slide-3 {
     background: url(https://images.unsplash.com/photo-1621001481154-a52cbb91fcc2);
-    background-size: cover;
-    background-position: center;
+    background-size: cover;    
 }
 
 section.carousel li#carousel-slide-4 {
     background: url(https://images.unsplash.com/photo-1621001481322-facc9cd1dae7);
-    background-size: cover;
-    background-position: center;
+    background-size: cover;    
 }
 
 section.carousel li a {
@@ -1074,6 +1070,12 @@ footer a:hover {
     }
 
 
+section.carousel li#carousel-slide-1,
+section.carousel li#carousel-slide-2,
+section.carousel li#carousel-slide-3,
+section.carousel li#carousel-slide-4 {    
+    background-position: center;
+}
     main section.hero {
         display: flex;
         flex-direction: column;
